configure application dependencies